# mfd

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  NOTICE  README.md  build.rs  cmfd.sh
.github/workflows/: ci.yml
asm/x86_64/: mfd.s  mfd_aa.s  mfd_extra.s  vge_extra.s
docs/: API.md  auto-sensors.md  drive-day.md  hardware-bezel.md  hardware.md  vehicle.md  widgets.md
docs/reference/: f16-mfd-catalog.md  ford-f150-uds-readonly.md  mfd-photo-index.md  mlu-m1-cmfd.md  vehicle-cmfd-design.md
examples/asm/: smoke.s
hardware/: README.md
hardware/elec/carrier-som/: README.md
hardware/elec/fab/: SEND-TO-FAB.md
hardware/elec/fab/board-a-bezel/: README.txt  bom.csv  cmfd-board-a-bezel-B_Cu.gbr  cmfd-board-a-bezel-B_Mask.gbr  cmfd-board-a-bezel-B_SilkS.gbr  cmfd-board-a-bezel-Drill.gbr  cmfd-board-a-bezel-Edge_Cuts.gbr  cmfd-board-a-bezel-F_Cu.gbr  cmfd-board-a-bezel-F_Mask.gbr  cmfd-board-a-bezel-F_Paste.gbr  cpl.csv  (+2 more)
hardware/mech/print/: cmfd-front-bezel.stl  cmfd-osb-cap.stl  cmfd-rear-shell.stl  cmfd-rocker.stl
hardware/mech/src/: cmfd_enclosure.scad
hardware/studio/: README.md
hardware/viewer/: index.html
include/: mfd.h  vge.h
site/: index.html
site/hardware/: index.html
src/: bezel.rs  color.rs  font.rs  geom.rs  lib.rs  page.rs  palette.rs  stroke.rs  surface.rs  term.rs  video.rs
src/auto/: mod.rs  vehicle_profile.rs
src/jet/: format_select.rs  mod.rs
src/obd/: feed.rs  ford.rs  mod.rs  session.rs  transport.rs  uds.rs
src/widget/: bezel.rs  label.rs  mod.rs  round_gauge.rs  softkeys.rs  status.rs  tape.rs
(+12 files in other folders)
