[package]
name = "mfd"
version = "0.1.0-dev.1"
edition = "2021"
license = "MIT"
description = "MFD — multi-function display library for aviation instrument pages and automotive reuse"
repository = "https://github.com/theesfeld/mfd"
homepage = "https://theesfeld.github.io/mfd/"
authors = ["theesfeld"]
rust-version = "1.74"
readme = "README.md"
keywords = ["mfd", "avionics", "instrument", "gauge", "cockpit"]
categories = ["graphics", "rendering", "gui"]
include = [
    "src/**/*",
    "asm/**/*",
    "include/**/*",
    "assets/fonts/**/*",
    "build.rs",
    "LICENSE",
    "NOTICE",
    "README.md",
    "CHANGELOG.md",
]

[lib]
name = "mfd"
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "mfd-demo"
path = "src/bin/mfd-demo.rs"

[dependencies]
libc = "0.2"
fontdue = "0.9"

[build-dependencies]
cc = "1"
